# simple-gpt

./: app.py  chainlit.md  pyproject.toml
