[tool.poetry]
name = "simple-gpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.1.305"
openai = "^1.35.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
